--- a/restaurants_management_nodeJs/package.json
+++ b/restaurants_management_nodeJs/package.json
@@ -12,7 +12,13 @@
     "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.19"
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.4.19",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
