--- a/restaurants_management_nodeJs/package.json
+++ b/restaurants_management_nodeJs/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.4.19",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "router": "^1.3.3"
   }
 }
